# cloud_learnings

./: .gitignore  pyproject.toml
aws/: samconfig.toml  template.yaml
aws/.aws-sam/: build.toml
aws/glue/: glue_loal.ipynb
aws/lambda/: create_dataframe.py  ev_retrieval.py
data/: Untitled.csv
data/parquet/: customer1.csv
practice/: CSVtoPythonDict.ipynb  Convert Parquet To CSV in Python with Pandas.ipynb  ListOfTuplesToPandasDataFrame.ipynb  concatenate_csv_to_list.py  convert_number_string_list.py  cursor_ai_demo.ipynb  pandas_convert_to_date_sting.ipynb  read_parquet.ipynb  sumRow_by_SpecificColumns.ipynb
practice/week1/: day_1.ipynb  day_2.ipynb  day_3.ipynb  day_4.ipynb
